Moved .css file location

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -9,7 +9,7 @@
     <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
-    <link rel="stylesheets" href="style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
     <title>Selena's Cheesecake Store</title>
 </head>
 
